fixed box alignments

--- a/template.css
+++ b/template.css
@@ -357,7 +357,7 @@ span.ic {
     padding-bottom: 15px;
 }
 #disclaimer {
-    width: auto;
+    width: 120%;
     background-color: #00477F;
     margin-left: auto;
     margin-right: auto;
